# silverhand

./: README.md  pyproject.toml
ShanBay/: scrapy.cfg
ShanBay/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ShanBay/Everything/: items.py  pipelines.py
ShanBay/Everything/misc/: agents.py  proxy.py
data_science_notes/.ipynb_checkpoints/: MultiIndexesUnstack-checkpoint.ipynb
project_01_youdotknowaboutrecitewords/Everything/misc/: middleware.py
project_02_bilibili_small_data/bilibili/bilibili/bilibili/: items.py  settings.py
project_03_dianpin/: simple_stat.ipynb  大众点评闵行区美食餐厅简单统计.xlsx
project_03_dianpin/.ipynb_checkpoints/: simple_stat-checkpoint.ipynb
projects/data_science_notes/: TestDemo.xlsx
projects/project_01_youdotknowaboutrecitewords/: Shanbay.ipynb
projects/project_01_youdotknowaboutrecitewords/Everything/: settings.py
projects/project_01_youdotknowaboutrecitewords/Everything/misc/: proxy.py  rotate_user_agent.py
projects/project_01_youdotknowaboutrecitewords/Everything/spiders/: shanbay.py
projects/project_04_echarts/: TPC01-Embed-ECharts-M03.ipynb  TPC02-Embed-ECharts.ipynb
